--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>iNoteBook - By Mirani</title>
+    <title>MyNotes - By Mirani</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
